Footer removed from pages, and added to App.jsx. fixed CSS layout issues.

--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,55 @@
-#root {
+
+html, body {
+  padding: 0;
+  margin: 0;
+  background-color: #9f8c8c;
+  width: 100%;
+  height: 100%;
+}
+
+.main-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: auto;
+  width: auto;
+}
+#page-footer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: auto;
+  border-top-style: double;
+  border-color: #33333359;
+  background-color: #9f8c8c;
+}
+
+#contact-info {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  background-color: #9f8c8c;
+  width: auto;
+  padding: 0.2rem;
 }
 
-body {
-  margin: 0;
+#contact-info p {
+  margin: 0.3rem;
+}
 
+#contact-info button {
+  border-radius: 0.3rem;
+  border-bottom-style: double ;
+  border-bottom-color: rgb(217, 222, 225);
+  border-right-style: double ;
+  border-right-color: rgb(217, 222, 225);
+  height: 1.5rem;
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
+#contact-info button:hover {
+  font-weight: 600;
 }
