--- a/src/css/profile.css
+++ b/src/css/profile.css
@@ -1,11 +1,8 @@
 
 
-main {
-    display: flex;
-    justify-content: center;
-}
 
-.main-container {
+
+.profile-container {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -16,7 +13,6 @@ main {
   height: auto;
   width: auto;
   min-width: 110vh;
-
   position: relative;
   background:
   linear-gradient(to right, #9f8c8c, rgba(255, 255, 255, 0) 20%, rgba(255, 255, 255, 0) 80%, #9f8c8c);
