--- a/src/css/register.css
+++ b/src/css/register.css
@@ -1,9 +1,4 @@
 
-
-#root {
-  padding: 0;
-}
-
 #register-container {
   justify-content: center;
   align-items: center;
